[DANIL] готовы формы 4 и 4-2

--- a/src/app/_dialog/dialog-registration/dialog-registration.component.html
+++ b/src/app/_dialog/dialog-registration/dialog-registration.component.html
@@ -22,7 +22,9 @@
             && regForm.submitted) || userRegistrForm.controls['email'].hasError('notunique')}">
       <span class="form-title">Your e-mail (account login):</span>
       <input [(ngModel)]="userRegistr.email" formControlName="email" (blur)="checkEmailExist()"  name="email"  type="text" class="form-control">
-       <span *ngIf="(userRegistrForm.controls['email'].hasError('required') || userRegistrForm.controls['email'].hasError('email')) && regForm.submitted" class="error-label">Required field</span>
+       <span *ngIf="userRegistrForm.controls['email'].hasError('required') && regForm.submitted" class="error-label">Required field</span>
+       <span *ngIf="userRegistrForm.controls['email'].hasError('email') && !userRegistrForm.controls['email'].hasError('required') && !userRegistrForm.controls['email'].hasError('notunique') && regForm.submitted"
+             class="error-label">Incorrect email</span>
        <span *ngIf="userRegistrForm.controls['email'].hasError('notunique')" class="error-label">User with this email already exists!</span>
     </label>
 
