--- a/src/app/_exchange/step2/step2.component.html
+++ b/src/app/_exchange/step2/step2.component.html
@@ -10,7 +10,7 @@
     <a href="#" class="btn btn-accentSecond rippler rippler-default full-width">Create free account</a>
 
     <div class="text-center">
-      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Back</a>
+      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="goToBack($event)">Back</a>
     </div>
   </div>
 </div>
