--- a/src/app/_exchange/step4-1/step4-1.component.html
+++ b/src/app/_exchange/step4-1/step4-1.component.html
@@ -62,7 +62,7 @@
     </label>
 
     <div class="form-btn between-children">
-      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Back</a>
+      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="goToBack($event)">Back</a>
 
       <label>
         <a href="#" class="btn btn-accent rippler rippler-default">Exhange</a>
