--- a/src/app/_exchange/step1/step1.component.html
+++ b/src/app/_exchange/step1/step1.component.html
@@ -3,7 +3,7 @@
     <div class="currencies currencies_small">
       <div class="item">
         <div class="item-icons" [style.background-image]="'url(' + exchangeFrom?.logo +')'"></div>
-        <div class="item-value" value="Advanced Cash">{{exchangeFrom?.name || 'From'}}</div>
+        <div class="item-value" value="Advanced Cash">{{exchangeFrom?.name || 'From'}} <span class="ttu">{{exchangeFrom?.currency}}</span></div>
       </div>
       <div class="switch-btn" (click)="exchangeSwap($event)"></div>
 
@@ -14,10 +14,11 @@
 
       <div class="item">
         <div class="item-icons" [style.background-image]="'url(' + exchangeTo?.logo +')'"></div>
-        <div class="item-value" value="Bitcoin">{{exchangeTo?.name || 'To'}}</div>
+        <div class="item-value" value="Bitcoin">{{exchangeTo?.name || 'To'}} <span class="ttu">{{exchangeTo?.currency}}</span></div>
       </div>
     </div>
   </div>
+
   <div class="captcha">
     <!--<re-captcha site_key="6Lfc51AUAAAAAJ300SFIWTq0vij-jtxbxomKE0et"></re-captcha>-->
     <re-captcha (captchaResponse)="handleCorrectCaptcha($event)" site_key="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI"></re-captcha>
