--- a/src/app/_exchange/step3-5/step3-5.component.html
+++ b/src/app/_exchange/step3-5/step3-5.component.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="form-btn between-children">
-      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Back</a>
+      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="goToBack($event)">Back</a>
 
       <label>
         <a href="#" class="btn btn-accent rippler rippler-default">Verify KYC</a>
