--- a/src/app/_exchange/step4-2/step4-2.component.html
+++ b/src/app/_exchange/step4-2/step4-2.component.html
@@ -5,43 +5,72 @@
     <a href="#" class="link tt-uppercase">Fill from last</a>
   </div>
 
-  <form action="#" class="form">
+  <form action="#" class="form" [ngClass]="{'custom-loader disabled': loading}" (submit)="submit($event)" [formGroup]="step4_2Form"  #form4_2="ngForm" novalidate>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_2Form.controls['name'].hasError('required')
+           || step4_2Form.controls['name'].hasError('maxlength'))
+           && form4_2.submitted}">
       <span class="form-title">{{ 'exchange.PersonalInfo.Name' | translate }}:</span>
-      <input type="text" class="form-control" value="john.doe@gmail.com">
+      <input type="text" [(ngModel)]="controlsName" formControlName="name" class="form-control" placeholder="john.doe@gmail.com">
+      <span *ngIf="step4_2Form.controls['name'].hasError('required') && form4_2.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_2Form.controls['name'].hasError('maxlength') && form4_2.submitted"
+            class="error-label">The maximum number of characters 64</span>
     </label>
 
     <div class="double">
-      <label class="form-group">
+      <label class="form-group" [ngClass]="{'has-error':
+           (step4_2Form.controls['bank'].hasError('required')
+           || step4_2Form.controls['bank'].hasError('maxlength'))
+           && form4_2.submitted}">
         <span class="form-title">{{ 'exchange.PersonalInfo.BankAccount' | translate }}:</span>
-        <input type="text" class="form-control" value=" 1112003761">
+        <input type="text" [(ngModel)]="controlsBank" formControlName="bank" class="form-control" placeholder="1112003761">
+        <span *ngIf="step4_2Form.controls['bank'].hasError('required') && form4_2.submitted"
+              class="error-label">Required field</span>
+        <span *ngIf="step4_2Form.controls['bank'].hasError('maxlength') && form4_2.submitted"
+              class="error-label">The maximum number of characters 64</span>
       </label>
 
-      <label class="form-group has-error">
+      <label class="form-group" [ngClass]="{'has-error':
+           (step4_2Form.controls['bank_code'].hasError('required')
+           || step4_2Form.controls['bank_code'].hasError('maxlength'))
+           && form4_2.submitted}">
         <span class="form-title">{{ 'exchange.PersonalInfo.BankCode' | translate }}:</span>
-        <input type="text" class="form-control" value="0600">
-        <span class="error-label">Invalid format</span>
+        <input type="text" [(ngModel)]="controlsBankCode" formControlName="bank_code" class="form-control" placeholder="0600">
+        <span *ngIf="step4_2Form.controls['bank_code'].hasError('required') && form4_2.submitted"
+              class="error-label">Required field</span>
+        <span *ngIf="step4_2Form.controls['bank_code'].hasError('maxlength') && form4_2.submitted" class="error-label">The maximum number of characters 4</span>
       </label>
     </div>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_2Form.controls['email'].hasError('required')
+           || step4_2Form.controls['email'].hasError('email')
+           || step4_2Form.controls['email'].hasError('maxlength'))
+           && form4_2.submitted}">
       <span class="form-title">Contact e-mail:</span>
-      <input type="email" class="form-control" value="john.doe@gmail.com">
+      <input type="email" [(ngModel)]="user.email" formControlName="email" class="form-control" placeholder="john.doe@gmail.com">
+      <span *ngIf="step4_2Form.controls['email'].hasError('required') && form4_2.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_2Form.controls['email'].hasError('email') && !step4_2Form.controls['email'].hasError('required') && form4_2.submitted"
+            class="error-label">Incorrect email</span>
+      <span *ngIf="step4_2Form.controls['email'].hasError('maxlength') && form4_2.submitted" class="error-label">The maximum number of characters 64</span>
     </label>
 
-    <label class="checkbox">
-      <input type="checkbox" class="checkbox-cotrol">
+
+    <label class="checkbox" [ngClass]="{'has-error': (step4_2Form.controls['checkbox'].hasError('required')
+           && form4_2.submitted )}">
+      <input [(ngModel)]="checkboxForm" formControlName="checkbox" type="checkbox" name="policeAgree" class="checkbox-control" required>
       <span class="checkbox-icons"></span>
       <span class="checkbox-title">I agree to the <a href="#" class="link">Terms and Conditions</a> and <a href="#" class="link">Privacy Policy</a></span>
     </label>
 
     <div class="form-btn between-children">
-      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Back</a>
+      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="goToBack($event)">Back</a>
 
       <label>
-        <a href="#" class="btn btn-accent rippler rippler-default">Exhange</a>
-        <input type="submit" hidden>
+        <button class="btn btn-accent rippler rippler-default" [disabled]="step4_2Form.invalid && form4_2.submitted">Exhange</button>
       </label>
     </div>
   </form>
