--- a/src/app/_exchange/step4-1/step4-1.component.html
+++ b/src/app/_exchange/step4-1/step4-1.component.html
@@ -2,61 +2,120 @@
   <div class="step-title"><h3 class="h3">3. Personal info and wallet</h3></div>
 
   <div class="text-center tip-link">
-    <a href="#" class="link tt-uppercase">Fill from last</a>
+    <a href="#" class="link tt-uppercase" (click)="fillLastData($event)">Fill from last</a>
   </div>
 
-  <form action="#" class="form">
+  <form class="form" [ngClass]="{'custom-loader disabled': loading}" (submit)="submit($event)" [formGroup]="step4_1Form"  #form4_1="ngForm" novalidate>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_1Form.controls['name'].hasError('required')
+           || step4_1Form.controls['name'].hasError('maxlength'))
+           && form4_1.submitted}">
       <span class="form-title">{{ 'exchange.PersonalInfo.Name' | translate }}:</span>
-      <input type="text" class="form-control" value="john.doe@gmail.com">
+
+      <input type="text" [(ngModel)]="formModel.name" formControlName="name" class="form-control" placeholder="Your name">
+
+      <span *ngIf="step4_1Form.controls['name'].hasError('required') && form4_1.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_1Form.controls['name'].hasError('maxlength') && form4_1.submitted" class="error-label">The maximum number of characters 64</span>
     </label>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_1Form.controls['address'].hasError('required')
+           || step4_1Form.controls['address'].hasError('maxlength'))
+           && form4_1.submitted}">
       <span class="form-title">{{ 'exchange.PersonalInfo.Address' | translate }}:</span>
-      <input type="text" class="form-control" value="john.doe@gmail.com">
+      <input type="text" [(ngModel)]="formModel.address" formControlName="address" class="form-control" placeholder="Your Address">
+      <span *ngIf="step4_1Form.controls['address'].hasError('required') && form4_1.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_1Form.controls['address'].hasError('maxlength') && form4_1.submitted" class="error-label">The maximum number of characters 64</span>
     </label>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_1Form.controls['country'].hasError('required')
+           || step4_1Form.controls['country'].hasError('maxlength'))
+           && form4_1.submitted}">
       <span class="form-title">{{ 'exchange.PersonalInfo.Country' | translate }}:</span>
-      <input type="text" class="form-control" value="john.doe@gmail.com">
+      <input type="text" [(ngModel)]="formModel.country" formControlName="country" class="form-control" placeholder="Your country">
+      <span *ngIf="step4_1Form.controls['country'].hasError('required') && form4_1.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_1Form.controls['country'].hasError('maxlength') && form4_1.submitted" class="error-label">The maximum number of characters 64</span>
     </label>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_1Form.controls['iban'].hasError('required')
+           || step4_1Form.controls['iban'].hasError('maxlength'))
+           && form4_1.submitted}">
       <span class="form-title">IBAN:</span>
-      <input type="text" class="form-control" value="john.doe@gmail.com" required="">
-      <span class="error-label">Invalid IBAN format</span>
+      <input type="text" [(ngModel)]="formModel.iban" formControlName="iban" class="form-control" placeholder="IBAN number"  required="">
+      <span *ngIf="step4_1Form.controls['iban'].hasError('required') && form4_1.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_1Form.controls['iban'].hasError('maxlength') && form4_1.submitted" class="error-label">The maximum number of characters 64</span>
     </label>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_1Form.controls['bic_swift'].hasError('required')
+           || step4_1Form.controls['bic_swift'].hasError('maxlength'))
+           && form4_1.submitted}">
       <span class="form-title">BIC/SWIFT</span>
-      <input type="text" class="form-control" value="john.doe@gmail.com">
+      <input type="text" [(ngModel)]="formModel.bic_swift" formControlName="bic_swift" class="form-control" placeholder="BIC/SWIFT number">
+      <span *ngIf="step4_1Form.controls['bic_swift'].hasError('required') && form4_1.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_1Form.controls['bic_swift'].hasError('maxlength') && form4_1.submitted" class="error-label">The maximum number of characters 64</span>
     </label>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_1Form.controls['bank_name'].hasError('required')
+           || step4_1Form.controls['bank_name'].hasError('maxlength'))
+           && form4_1.submitted}">
       <span class="form-title">{{ 'exchange.PersonalInfo.BankName' | translate }}:</span>
-      <input type="text" class="form-control" value="john.doe@gmail.com">
+      <input type="text" [(ngModel)]="formModel.bank_name" formControlName="bank_name" class="form-control" placeholder="Your bank name">
+      <span *ngIf="step4_1Form.controls['bank_name'].hasError('required') && form4_1.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_1Form.controls['bank_name'].hasError('maxlength') && form4_1.submitted" class="error-label">The maximum number of characters 64</span>
     </label>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_1Form.controls['bank_address'].hasError('required')
+           || step4_1Form.controls['bank_address'].hasError('maxlength'))
+           && form4_1.submitted}">
       <span class="form-title">{{ 'exchange.PersonalInfo.BankAddress' | translate }}:</span>
-      <input type="text" class="form-control" value="john.doe@gmail.com">
+      <input type="text" [(ngModel)]="formModel.bank_address" formControlName="bank_address" class="form-control" placeholder="Bank address">
+      <span *ngIf="step4_1Form.controls['bank_address'].hasError('required') && form4_1.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_1Form.controls['bank_address'].hasError('maxlength') && form4_1.submitted" class="error-label">The maximum number of characters 64</span>
     </label>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_1Form.controls['bank_country'].hasError('required')
+           || step4_1Form.controls['bank_country'].hasError('maxlength'))
+           && form4_1.submitted}">
       <span class="form-title">{{ 'exchange.PersonalInfo.Country' | translate }}:</span>
-      <input type="text" class="form-control" value="john.doe@gmail.com">
+      <input type="text" [(ngModel)]="formModel.bank_country" formControlName="bank_country" class="form-control" placeholder="Bank country">
+      <span *ngIf="step4_1Form.controls['bank_country'].hasError('required') && form4_1.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_1Form.controls['bank_country'].hasError('maxlength') && form4_1.submitted" class="error-label">The maximum number of characters 64</span>
     </label>
 
-    <label class="form-group">
+    <label class="form-group" [ngClass]="{'has-error':
+           (step4_1Form.controls['email'].hasError('required')
+           || step4_1Form.controls['email'].hasError('email')
+           || step4_1Form.controls['email'].hasError('maxlength'))
+           && form4_1.submitted}">
       <span class="form-title">Contact e-mail:</span>
-      <input type="email" class="form-control" value="john.doe@gmail.com">
+      <input type="email" [(ngModel)]="user.email" formControlName="email" class="form-control" placeholder="example@gmail.com">
+      <span *ngIf="step4_1Form.controls['email'].hasError('required') && form4_1.submitted"
+            class="error-label">Required field</span>
+      <span *ngIf="step4_1Form.controls['email'].hasError('email') && !step4_1Form.controls['email'].hasError('required') && form4_1.submitted"
+            class="error-label">Incorrect email</span>
+      <span *ngIf="step4_1Form.controls['email'].hasError('maxlength') && form4_1.submitted" class="error-label">The maximum number of characters 64</span>
     </label>
 
 
 
-    <label class="checkbox">
-      <input type="checkbox" class="checkbox-cotrol">
+    <label class="checkbox" [ngClass]="{'has-error': (step4_1Form.controls['checkbox'].hasError('required')
+           && form4_1.submitted )}">
+      <input [(ngModel)]="formModel.checkbox" formControlName="checkbox" type="checkbox" name="policeAgree" class="checkbox-control" required>
       <span class="checkbox-icons"></span>
       <span class="checkbox-title">I agree to the <a href="#" class="link">Terms and Conditions</a> and <a href="#" class="link">Privacy Policy</a></span>
     </label>
@@ -65,8 +124,7 @@
       <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="goToBack($event)">Back</a>
 
       <label>
-        <a href="#" class="btn btn-accent rippler rippler-default">Exhange</a>
-        <input type="submit" hidden>
+        <button class="btn btn-accent rippler rippler-default" [disabled]="step4_1Form.invalid && form4_1.submitted">Exhange</button>
       </label>
     </div>
   </form>
