[DANIL] last commit

--- a/src/app/_exchange/step2/step2.component.html
+++ b/src/app/_exchange/step2/step2.component.html
@@ -5,9 +5,9 @@
   </p>
 
   <div class="reduced-width">
-    <a href="#" class="btn btn-accentSecond rippler rippler-default full-width">I have an account</a>
+    <a href="#" class="btn btn-accentSecond rippler rippler-default full-width" (click)="goToAuth($event)">I have an account</a>
     <div class="or line-sides">or</div>
-    <a href="#" class="btn btn-accentSecond rippler rippler-default full-width">Create free account</a>
+    <a href="#" class="btn btn-accentSecond rippler rippler-default full-width" (click)="goToRegistr($event)">Create free account</a>
 
     <div class="text-center">
       <a href="#" class="btn btn-border btn-border_accent rippler rippler-default" (click)="goToBack($event)">Back</a>
