--- a/src/app/_exchange/step3-6/step3-6.component.html
+++ b/src/app/_exchange/step3-6/step3-6.component.html
@@ -2,16 +2,15 @@
   <div class="step-title"><h3 class="h3">2. Account is verified!</h3></div>
 
   <p class="p_small">
-    Congratulations! You can <b>continue</b> with your <br><b>transaction process</b>.
+    Congratulations! <b>You will be able to continue</b> the exchange of the specified amount <b>after moderation</b> of all documents.
   </p>
 
   <form action="#" class="form">
     <div class="form-btn between-children">
-      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Back</a>
+      <a class="btn btn-border btn-border_accent rippler rippler-default" (click)="goToBack($event)">Back</a>
 
       <label>
-        <a href="#" class="btn btn-accent rippler rippler-default">Continue</a>
-        <input type="submit" hidden>
+        <a href="#" class="btn btn-accent rippler rippler-default" (click)="goToNext($event)">Finish</a>
       </label>
     </div>
   </form>
