--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1473,7 +1473,12 @@ hr
         color: #34bfa3
         &:hover
         color: darken(#34bfa3, 3%)
-
+    &-info
+      border-color: #ddd
+      .btn-close
+        color: #ddd
+        &:hover
+        color: darken(#ddd, 3%)
 
 
 .form
