--- a/src/styles.sass
+++ b/src/styles.sass
@@ -8,3 +8,34 @@ main
   min-height: 50vh
 .rc-anchor-alert
   display: none
+
+.form-group
+  .dropbtn.btn
+    position: relative
+    top: auto
+    right: auto
+    width: auto
+  .scrollable-menu
+    max-height: 300px !important
+    padding: 10px 0
+    a
+      font-size: 14px
+      line-height: 18px
+
+  .dropdown-content a
+    padding: 5px 15px !important
+  .input-group-addon
+    display: flex
+    position: absolute
+    top: 50%
+    transform: translateY(-50%)
+    left: 2rem
+    z-index: 10
+  .country-prefix .form-control
+    padding-left: 5rem
+
+.currencies .item-value .ttu
+  margin-left: 4px
+
+
+
