--- a/src/app/_exchange/step3-4/step3-4.component.html
+++ b/src/app/_exchange/step3-4/step3-4.component.html
@@ -1,30 +1,62 @@
 <div class="step">
-  <div class="step-title"><h3 class="h3">2. Phone verified!</h3></div>
+  <div class="step-title" *ngIf="!userModel.verification_image"><h3 class="h3">2. Phone verified!</h3></div>
+  <div class="step-title" *ngIf="userModel.verification_image"><h3 class="h3">2. ID Card waiting moderation!</h3></div>
 
-  <p class="p_small">
+  <p class="p_small" *ngIf="!userModel.verification_image">
     Congratulations! Your phone number was <br>
     verified. Let’s <b>continue</b> with your <b>transaction</b> <br>
     process and <b>verify</b> your <b>identity card</b>.
   </p>
+  <form class="form" [ngClass]="{'custom-loader disabled': loadingIdCard}" (submit)="submitIdCardForm($event)" [formGroup]="idCardForm" #ngIdCardForm="ngForm" novalidate>
 
-  <form action="#" class="form">
-
-    <div class="form-group">
+    <div class="form-group" *ngIf="!userModel.verification_image">
       <span class="form-title">Upload image of your ID card:</span>
       <label class="upload-file">
-        <input type="file" class="form-control" required="">
-        <span class="upload-file__name">No file chosen</span>
+        <input type="file" (change)="fileChangeIdCard($event)" formControlName="file" class="form-control" placeholder="Upload file" accept="image/*">
+        <span class="upload-file__name" [ngClass]="{rtl: IdCardFileName}">{{IdCardFileName}}</span>
         <span class="btn btn-accent rippler rippler-default js-file-upload">Choose file</span>
       </label>
-      <span class="error-label">Bad file format, supported - jpg and png</span>
+      <div class="has-error" *ngIf="idCardForm.controls['file'].hasError('required') && ngIdCardForm.submitted">
+        <span class="error-label">This field is required!</span>
+      </div>
+      <div class="has-error" *ngIf="idCardForm.controls['file'].hasError('badformat')">
+        <span class="error-label">Bad file format, supported - jpg and png</span>
+      </div>
+
+      <div class="has-error" *ngIf="idCardForm.controls['file'].hasError('maxsize')">
+        <span class="error-label">Max size 120 KB</span>
+      </div>
     </div>
 
+    <div class="checkbox checkbox-success" *ngIf="userModel.verification_image">
+      <input type="checkbox" class="checkbox-cotrol" checked>
+      <span class="checkbox-icons"></span>
+      <span class="checkbox-title">
+        <span class="verified">
+          <span class="verified-success">Document uploaded! Link to the <a [attr.href]="userModel.verification_image" target="_blank" class="link">document</a></span>
+          <span class="verified-success" *ngIf="userModel.verification_ok">Document <b>verified</b>!</span>
+        </span>
+      </span>
+    </div>
+    <div class="alert alert-info" *ngIf="userModel.verification_image">
+      <span>The <b>document was successfully uploaded</b> but has <b>not yet been verified</b> by the administration. Upon completion of the check, <b>we will send you an email</b> to the email address specified during registration.</span>
+    </div>
+
+
     <div class="form-btn between-children">
-      <a href="#" class="btn btn-border btn-border_accent rippler rippler-default">Back</a>
+      <a class="btn btn-border btn-border_accent rippler rippler-default" (click)="goToBack($event)">Back</a>
 
       <label>
-        <a href="#" class="btn btn-accent rippler rippler-default">Verify ID</a>
-        <input type="submit" hidden>
+        <div class="loadingSuccess" *ngIf="successIdCard">
+          <svg xmlns="http://www.w3.org/2000/svg" width="46" height="46" viewBox="-263.5 236.5 26 26">
+            <g class="svg-success">
+              <circle cx="-250.5" cy="249.5" r="12"/>
+              <path d="M-256.46 249.65l3.9 3.74 8.02-7.8"/>
+            </g>
+          </svg>
+        </div>
+        <button type="submit" class="btn btn-accentSecond rippler rippler-default" *ngIf="!userModel.verification_image" [disabled]="idCardForm.invalid && ngIdCardForm.submitted">Verify ID</button>
+        <button type="submit" class="btn btn-accentSecond rippler rippler-default" *ngIf="userModel.verification_image" (click)="goToNext($event)">Next</button>
       </label>
     </div>
   </form>
