--- a/src/assets/sass/_media.sass
+++ b/src/assets/sass/_media.sass
@@ -99,6 +99,8 @@
 		left: 11rem;
 	.transcations-process
 		margin-top: 5rem
+  .form .double .form-group:first-child
+    width: 16rem
 @media only screen and (max-width : 1100px)
 	.inner .main__wrapper
 		.navbars
